[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Eaux.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/Ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Perso.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ZonePeche.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Perso1.gd" type="Script" id=5]
[ext_resource path="res://scripts/Perso2.gd" type="Script" id=6]
[ext_resource path="res://scenes/Dropzone.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ZoneAReparer.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/GlobalZonesAReparer.gd" type="Script" id=9]

[node name="MainWorld" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 769.201, 452.439 )
scale = Vector2( 1.52811, 1.55005 )
texture = ExtResource( 1 )

[node name="Ship" parent="." instance=ExtResource( 2 )]
position = Vector2( 1034.81, 270.429 )

[node name="ZonePeche" parent="." instance=ExtResource( 4 )]
position = Vector2( 284.088, 691.62 )

[node name="Players" type="Node2D" parent="."]
position = Vector2( 761.94, 446.803 )

[node name="Perso1" parent="Players" instance=ExtResource( 3 )]
position = Vector2( -496.71, -233.933 )
script = ExtResource( 5 )

[node name="Perso2" parent="Players" instance=ExtResource( 3 )]
position = Vector2( 470.588, -239.092 )
script = ExtResource( 6 )

[node name="Dropzone" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 766.088, 101.134 )
scale = Vector2( 1.25, 1.5 )

[node name="ZonesAReparer" type="Node2D" parent="."]
position = Vector2( -61.8167, 18.6616 )
script = ExtResource( 9 )

[node name="ZoneAReparer" parent="ZonesAReparer" groups=[
"zoneAReparer",
] instance=ExtResource( 8 )]
position = Vector2( 1161.69, 244.934 )
rotation = -0.699877
scale = Vector2( 0.972, 0.857 )

[node name="ZoneAReparer2" parent="ZonesAReparer" groups=[
"zoneAReparer",
] instance=ExtResource( 8 )]
position = Vector2( 961.074, 15.1626 )
moduleId = 1

[node name="ZoneAReparer3" parent="ZonesAReparer" groups=[
"zoneAReparer",
] instance=ExtResource( 8 )]
position = Vector2( 1428.78, 97.9736 )
rotation = 0.211185
moduleId = 2

[node name="NodeRequin" type="Node" parent="."]

[node name="Requin" parent="NodeRequin" instance=ExtResource( 10 )]
SpawnRandomZones = NodePath("../RandomSpawnZone")
player = NodePath("../../Players/Perso2")
distanceactif = 60
time = 0.0

[node name="RandomSpawnZone" type="Node" parent="NodeRequin"]

[node name="Node2D" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 130.31, 113.126 )

[node name="Node2D2" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 519.806, 200.476 )

[node name="Node2D3" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 105.966, 436.752 )

[node name="Node2D4" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 536.99, 700.235 )

[node name="Node2D5" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 154.653, 803.337 )

[node name="Node2D6" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 532.694, 522.67 )

[node name="Node2D7" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 817.657, 842 )

[node name="Node2D8" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 1197.13, 648.684 )

[node name="Node2D9" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 1397.61, 796.177 )

[node name="Node2D10" type="Node2D" parent="NodeRequin/RandomSpawnZone"]
position = Vector2( 588.541, 189.021 )

[node name="NodeRequin2" type="Node" parent="."]

[node name="Requin" parent="NodeRequin2" instance=ExtResource( 10 )]
SpawnRandomZones = NodePath("../RandomSpawnZone")
player = NodePath("../../Players/Perso2")
distanceactif = 60
time = 0.3

[node name="RandomSpawnZone" type="Node" parent="NodeRequin2"]

[node name="Node2D" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 130.31, 113.126 )

[node name="Node2D2" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 519.806, 200.476 )

[node name="Node2D3" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 105.966, 436.752 )

[node name="Node2D4" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 536.99, 700.235 )

[node name="Node2D5" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 154.653, 803.337 )

[node name="Node2D6" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 532.694, 522.67 )

[node name="Node2D7" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 817.657, 842 )

[node name="Node2D8" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 1197.13, 648.684 )

[node name="Node2D9" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 1397.61, 796.177 )

[node name="Node2D10" type="Node2D" parent="NodeRequin2/RandomSpawnZone"]
position = Vector2( 588.541, 189.021 )
[connection signal="module_repaired" from="ZonesAReparer/ZoneAReparer" to="ZonesAReparer" method="_on_ZoneAReparer_module_repaired"]
[connection signal="module_repaired" from="ZonesAReparer/ZoneAReparer2" to="ZonesAReparer" method="_on_ZoneAReparer2_module_repaired"]
[connection signal="module_repaired" from="ZonesAReparer/ZoneAReparer3" to="ZonesAReparer" method="_on_ZoneAReparer3_module_repaired"]
